[CONJ-1112] style correction after google style update